--- a/src/components/bio/style.scss
+++ b/src/components/bio/style.scss
@@ -42,7 +42,7 @@
 		position: relative;
 		padding-bottom: 32px;
 
-		// For the sizing and font chnages of the h1
+		// For the sizing and font changes of the h1
 
 		h1{
 			@extend %header-font;
